# garopabus-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  backup.json  create_tables.sql  docker-compose.yml  inserts_select.sql  manage.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy-development.yml  deploy-production.yml  workflow.yml
garopabus/: asgi.py  settings.py  urls.py  wsgi.py
prisma/: schema.prisma
prisma/migrations/20241006181107_init/: migration.sql
prisma/migrations/20241008175823_add_user/: migration.sql
src/: app.ts  server.ts
src/controllers/: horarios.controller.ts  horarios.ts  index.ts  paradas.controller.ts  paradas.ts  paradasRotas.ts  rotas.ts  rotasBairros.controller.ts  user.controller.ts
src/routes/: horarios.routes.ts  horarios.ts  index.ts  paradas.routes.ts  paradas.ts  paradasRotas.ts  rotas.ts  rotasBairros.routes.ts  user.routes.ts
src/services/: jwt.service.ts
transporte/: admin.py  filters.py  logging.py  models.py  serializers.py  urls.py  utils.py  views.py
transporte/migrations/: 0001_initial.py  0002_remove_log_id_administrador_log_usuario_and_more.py  0003_delete_log.py  0004_rename_nome_rota_bairro_destido_rota_bairro_origem.py  0005_rename_bairro_destido_rota_bairro_destino.py  0006_alter_horarioonibus_hora_chegada_and_more.py  0007_alter_horarioonibus_dia_semana.py  0008_rota_id_rota_principal.py  0009_alter_pontoonibus_link_maps.py  0010_pushsubscription_notification.py  0011_alter_notification_user.py  0012_remove_notification_user.py
